# arcadia-index

./: .dockerignore  .env  .env.ci  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  backup.sh  compose.yml  eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
backend/cron-jobs/: .env.example  Cargo.toml
backend/cron-jobs/src/: env.rs  main.rs  store.rs
backend/cron-jobs/src/periodic_tasks/: peers.rs  scheduler.rs  torrents.rs
backend/storage/: .env.example  Cargo.toml
backend/storage/.sqlx/: query-01e23ac5ea61db34da6f3408ac0b2b08cff82af91117d5a961e1cb2b9e14f6d2.json  query-0315da131b68d6bfdd9fc440b18112d1512edb00dc2a1a11f6fe8438ca518727.json  query-0793c255ebc855df14cb8f984507f33fc4397354a732c97e22b71c02c474ebf2.json  query-108ccfa244fb15e63f65c8a69d05b8c5fe3f57854967ded2cfe7af277e1de6b9.json  query-10c2aa62abdbf5f8a82c118710661815b93b6d6df5742722faad5f9671af4ac3.json  query-10cd0ae1bfc1a98c305abea9814e191f914613204f795cde72f43920f5284f3c.json  query-17a66ce5222c12349791df72eeea87a4df730db5dd22ab5a286d6f5aed5060d0.json  query-18ab96a35b7eade04c493073e16ec365ea556c2e618028cd79f98164ac9a0a43.json  query-1ba3d0500ac2e8ea8e74eb40aaae30120571f581ff3597c25cf04502dd7c9fc9.json  query-1c6fc9eec8ba09ae901b2ce1f5fa2f066503d7bc661351641c65eded99c17552.json  query-1f56ea980f150a9668b6d30985b56100e1a4a24356114d1864e63ffd117291b7.json  query-1fb4c29107a20ee61f1fe4e37ebf929572af95621e9a5f15fd22cf37f2a87d57.json  query-1fb5cfbfc44568d47861ff500d1ca375ba514b848ea0ad9a7fef833be791409c.json  query-219326267e41e1aae27bbdfa821a615b6cc8e67e8cff82227d125ed46219ece7.json  query-2247b3a68a150a372b41698398ec0ba22ed6ea87babbd4f9be825821201986f7.json  query-27fcbba69b5207ba6d5b852c04427d913dc0f936e24f7850f6d4bf58c65bc797.json  query-2912c2e0c16b5dd6d8e6d0a58450f5f394ed490d19c9783405109726ee86e18b.json  query-2be3a8907e07991eb78ae2f62cc64388e756d6f4ebb24f0f8d0446f27aee8237.json  query-2c15905208c64ca84d244de7dd1233e36d860ea808332c16021c03bf9310d9bb.json  query-2c69e15f31de9fc456939274ff1bec03793e0cbb8adf594ba9a9c09b6b135f0c.json  query-2e93eb296e0102f4077a7f6eeaa2404c05a6e67325d53b2703e6c0172f2b2da1.json  query-2eaafbcd2d74898da894128ded1e7b5b80ace3994b244d90b29c24119a9b22aa.json  query-323924e7d45be698241e77833b4175efb034e084c8e53ba5fc2c3937fb634ea9.json  query-37182fdfde0b4948d12060ae51048ce315727a9863424d85f9eff0a4ed05c63b.json  query-3843fac2b81a9e4b083bd04f194e1191047ac677d35e35b8bae474b8a18fbbf4.json  query-3a17fd18a4051cc3455eba2c42c5967c6f8982f8de51100dff1dbeb3f9ccbe31.json  query-3a6ddda0a728aec2e3141ac6f9af7af73deae90da1311e07d0a085f1a6c25e9d.json  query-3b7e1a692b986ace00f9e897dc90f872e80e68ed2d3e31fd64ae0dd04f72f69a.json  query-3d21ca88a153a4f470ef2034d62c214dab0d0800756dfb0e6941e1064eb6a449.json  query-43c79de2000f881255a4fb9a2dd999e054080c9ea67663a80e22d61fa7860ba8.json  query-490c22eefad41b9977c426ff957a90a30ed4166a04e7b49459003799232ebb84.json  query-495f12ee6e8ff5a41580375527edffab50b210cad56bb2a2491466a2599a6624.json  query-49f9cf141cc03ec493d7aedc1d83790fea64a61959c7b94fe4aecc12c7d4cc9e.json  query-4c0d43a55e84735431ca5e4d488509acf4fe615fc33b19ff512d0529db310219.json  query-4e362764b8f74fdced061ff73a3f59612e03035f1a9edaa33449602322fc9af6.json  query-4f85327b8dd98419080bdb993a00f795e7f14cb8006eb5d402ca842fc87a49da.json  query-50bd9ef80f639aadc53ff2b165667ac0d9c4689a84422a9c8cfd5a4f39e465ca.json  query-50f86f561f9170195c40f44d1eb289bfd574e8e080b8304ffcc7755dd65becdf.json  query-548e6f93067c88de9c7ae4e5a184ccc60bcf872eab55cfcd8219fe8a4e9f3e7f.json  query-5c3d32339c900c29d1f2a548ac625ddb80c4844bf4393d1534705d201279f27a.json  (+82 more)
backend/storage/migrations/: 20250312215600_initdb.sql
backend/storage/migrations/fixtures/: fixtures.sql
backend/storage/scripts/: init_db.sh
backend/storage/src/: connection_pool.rs  lib.rs
backend/storage/src/models/: artist.rs  collage.rs  common.rs  conversation.rs  edition_group.rs  entity.rs  forum.rs  gift.rs  home_stats.rs  invitation.rs  master_group.rs  mod.rs  notification.rs  peer.rs  series.rs  staff_pm.rs  subscription.rs  title_group.rs  title_group_comment.rs  torrent.rs  torrent_activity.rs  torrent_report.rs  torrent_request.rs  torrent_request_comment.rs  torrent_request_vote.rs  user.rs  user_application.rs  wiki.rs
backend/storage/src/redis/: error.rs  mod.rs
backend/storage/src/repositories/: announce_repository.rs  artist_repository.rs  auth_repository.rs  collage_repository.rs  conversation_repository.rs  edition_group_repository.rs  forum_repository.rs  gift_repository.rs  invitation_repository.rs  master_group_repository.rs  mod.rs  notification_repository.rs  peer_repository.rs  series_repository.rs  staff_pm_repository.rs  stats_repository.rs  subscriptions_repository.rs  title_group_comment_repository.rs  title_group_repository.rs  torrent_report_repository.rs  torrent_repository.rs  torrent_request_comment_repository.rs  torrent_request_repository.rs  torrent_request_vote_repository.rs  tracker_repository.rs  user_application_repository.rs  user_repository.rs  wiki_repository.rs
docs/: book.toml
shared/: .env.ci  Cargo.toml
shared/.sqlx/: query-5f5cc37d639a2f0650ac2afcdc610538f49816480be0f51c40a67bb74d97e874.json  query-68c566af855b2cb1e46b77cd829934488b1d4da1086f74b7491d7468753f539a.json  query-bb66b1b13123112781db47d98cd02b28d11470b7c84d7aec56ec102fee20264d.json
shared/src/: error.rs  lib.rs  utils.rs
shared/src/tracker/models/: env.rs  infohash_2_id.rs  mod.rs  passkey_2_id.rs  peer.rs  peer_id.rs  peer_update.rs  torrent.rs  torrent_activity_update.rs  torrent_update.rs  user.rs  user_update.rs
tracker/arcadia_tracker/: .env.docker  .env.example  Cargo.toml
tracker/arcadia_tracker/src/: env.rs  lib.rs  main.rs  middleware.rs  routes.rs  scheduler.rs
tracker/arcadia_tracker/tests/: common.rs  test_announce.rs
(+914 files in other folders)
