[package]
name = "arcadia-index"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
# there is a possibility to add TLS support (https://github.com/launchbadge/sqlx?tab=readme-ov-file#install)
sqlx = { version = "0.8", features = [
    "runtime-async-std",
    "postgres",
    "chrono",
] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.15.1", features = ["serde", "v4"] }
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"
futures = "0.3"
rand = "0.9.0"
bip_metainfo = "0.12.0"
serde_bytes = "0.11"
actix-multipart = "0.7.2"
