[package]
name = "arcadia-cron-jobs"
version = "0.1.0"
edition = "2024"

[dependencies]
envconfig = "0.11.0"
env_logger = "0.11.8"
dotenvy = "0.15.7"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "fs"] }
tokio-cron-scheduler = "0.14"
arcadia-storage = { path = "../storage"}
log = "0.4"
