[package]
name = "arcadia-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-multipart = "0.7.2"
arcadia-common = { path = "../common"}
argon2 = "0.5.3"
bip_metainfo = "0.12.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono", "ipnetwork" ] }
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0", features = ["preserve_order"]}
strum = { version = "0.27", features = ["derive"] }
musicbrainz_rs = "0.9.1"
rand = "0.9.0"
utoipa = { version = "5.3.1", features = ["actix_extras"] }
