[package]
name = "arcadia_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
envconfig = "0.11.0"
dotenvy = "0.15.7"
utoipa = { version = "5.3.1", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["actix-web", "debug-embed"] }
utoipa-actix-web = "0.1.2"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.8"
thiserror = "2.0.12"
actix-web-httpauth = "0.8.2"
futures = "0.3"
